add wpf wrapper and little bit of logic

--- a/src/SysTracker/Desktop/Desktop.csproj
+++ b/src/SysTracker/Desktop/Desktop.csproj
@@ -9,4 +9,14 @@
     <RootNamespace>SysTracker.Desktop</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Resources\Fonts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
+  </ItemGroup>
+
 </Project>
