--- a/src/SysTracker/Core/Core.csproj
+++ b/src/SysTracker/Core/Core.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Exceptions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Management" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
