--- a/src/SysTracker/Application/Application.csproj
+++ b/src/SysTracker/Application/Application.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <AssemblyName>SysTracker.Application</AssemblyName>
     <RootNamespace>SysTracker.Application</RootNamespace>
   </PropertyGroup>
